# pkg-tawala

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .python-version  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.docs/: DEPLOYMENT.md
components/tawala-school/: pyproject.toml
components/tawala-school/src/tawala_school/: apps.py  conf.py  urls.py
components/tawala-wip/: pyproject.toml
components/tawala-wip/src/tawala_wip/: apps.py  conf.py  urls.py  views.py
components/tawala-wip/src/tawala_wip/templates/wip/: layout.html
core/tawala/: pyproject.toml
core/tawala-api/: pyproject.toml
core/tawala-api/src/tawala_api/: templatetags.py
core/tawala-api/src/tawala_api/apps/: _2_schema.py  _3_fetch.py  __init__.py
core/tawala-api/src/tawala_api/conf/: _1_enums.py  _3_fetch.py  __init__.py
core/tawala-api/src/tawala_api/management/: cli.py
core/tawala-api/src/tawala_api/management/commands/: generate.py  new.py
core/tawala-api/src/tawala_api/utils/: forms.py  models.py
core/tawala-api/src/tawala_api/vercel/: storage.py
core/tawala-ui/: pyproject.toml
core/tawala-ui/src/tawala_ui/: apps.py  conf.py  templatetags.py
core/tawala-ui/src/tawala_ui/assets/: templatetags.py
core/tawala-ui/src/tawala_ui/assets/aos/: apps.py
core/tawala-ui/src/tawala_ui/assets/bootstrap/: apps.py
core/tawala-ui/src/tawala_ui/utils/: admin.py  models.py
core/tawala-ui/src/tawala_ui/widgets/: templatetags.py
core/tawala-ui/src/tawala_ui/widgets/addresses/: admin.py  apps.py  forms.py  models.py  utils.py
core/tawala-ui/src/tawala_ui/widgets/brand/: admin.py  apps.py  models.py
core/tawala-ui/src/tawala_ui/widgets/footer/: apps.py
core/tawala-ui/src/tawala_ui/widgets/header/: apps.py
core/tawala-ui/src/tawala_ui/widgets/lists/: admin.py  apps.py  models.py
core/tawala-ui/src/tawala_ui/widgets/logout/: apps.py
core/tawala-ui/src/tawala_ui/widgets/preloader/: apps.py
core/tawala-ui/src/tawala_ui/widgets/scroll_top/: apps.py
core/tawala/src/tawala/: apps.py  conf.py  settings.py  urls.py
core/tawala/src/tawala/management/: __init__.py  api.py  cli.py
core/tawala/src/tawala/management/commands/: hash.py  runserver.py  seed.py
core/tawala/src/tawala/static/base/: site.webmanifest
core/tawala/src/tawala/templates/base/: 404.html  layout.html
core/tawala/src/tawala/templatetags/: base.py
create-tawala-app/: README.md  pyproject.toml
create-tawala-app/src/create_tawala_app/: cli.py
create-tawala-app/src/create_tawala_app/scripts/: __init__.py  _startproject.py
tawala/: README.md  pyproject.toml
tawala-cli/: README.md  pyproject.toml
tawala-cli/src/tawala_cli/: cli.py
tawala-cli/src/tawala_cli/commands/: __init__.py  _generate.py  _new.py  generate.py  new.py
tawala-docs/: .gitignore  CONFIG.md  README.md  pyproject.toml  vercel.json
tawala-docs/api/: asgi.py  wsgi.py
tawala-docs/app/: __init__.py  urls.py  views.py
tawala-docs/app/migrations/: __init__.py
tawala-docs/app/templates/app/: layout.html
tawala-vercel/: pyproject.toml
tawala-vercel/src/tawala_vercel/: __init__.py  storage.py
tawala/src/tawala/: __init__.py
tawala/src/tawala/apps/: __init__.py
tawala/src/tawala/apps/layouts/: __init__.py
tawala/src/tawala/apps/layouts/base/: __init__.py  urls.py
tawala/src/tawala/apps/layouts/wip/: __init__.py  admin.py  models.py  urls.py  views.py
tawala/src/tawala/apps/vendors/: __init__.py
tawala/src/tawala/apps/widgets/: __init__.py
tawala/src/tawala/components/layouts/wip/: urls.py  views.py
tawala/src/tawala/components/vendors/: templatetags.py
tawala/src/tawala/components/widgets/: templatetags.py
tawala/src/tawala/components/widgets/addresses/: models.py
tawala/src/tawala/components/widgets/lists/: admin.py
tawala/src/tawala/components/widgets/search/: forms.py
tawala/src/tawala/core/: apps.py  forms.py  models.py  urls.py
tawala/src/tawala/core/backends/: __init__.py  storage.py
tawala/src/tawala/core/management/: cli.py  conf.py
tawala/src/tawala/core/management/commands/: runserver.py  seed.py
tawala/src/tawala/core/templates/core/: index.html  layout.html
tawala/src/tawala/core/templatetags/: __init__.py
tawala/src/tawala/management/api/: __init__.py  asgi.py  cli.py  wsgi.py
tawala/src/tawala/management/backends/: __init__.py  storage.py
tawala/src/tawala/management/commands/: runserver.py
tawala/src/tawala/management/commands/helpers/: run.py
tawala/src/tawala/management/settings/: conf.py  fetch.py  schema.py
tawala/src/tawala/settings/: conf.py  enums.py  main.py  schema.py
treeolive/: LICENSE  pyproject.toml
treeolive-api/: pyproject.toml
treeolive-api/src/treeolive_api/: cli.py  sgi.py
treeolive-api/src/treeolive_api/commands/: generate.py  new.py
treeolive-api/src/treeolive_api/conf/: __init__.py  _enums.py  _fetch.py  _mappings.py  fetch.py
treeolive-api/src/treeolive_api/contrib/: __init__.py
treeolive-api/src/treeolive_api/contrib/ui/: forms.py  models.py
treeolive-api/src/treeolive_api/contrib/vercel/: storage.py
treeolive-ui/: pyproject.toml
treeolive-ui/src/treeolive_ui/: conf.py
treeolive-ui/src/treeolive_ui/components/assets/: templatetags.py
treeolive-ui/src/treeolive_ui/components/layouts/: templatetags.py
treeolive-ui/src/treeolive_ui/components/widgets/: templatetags.py
treeolive-ui/src/treeolive_ui/components/widgets/addresses/: forms.py  models.py  utils.py
treeolive-ui/src/treeolive_ui/components/widgets/lists/: models.py
treeolive-ui/src/treeolive_ui/components/widgets/logout/: urls.py
treeolive/src/treeolive/: apps.py  urls.py  views.py
treeolive/src/treeolive/components/layouts/: templatetags.py
treeolive/src/treeolive/core/: urls.py  views.py
treeolive/src/treeolive/core/backends/: storage.py
treeolive/src/treeolive/core/management/: cli.py  conf.py
treeolive/src/treeolive/management/: cli.py  conf.py
treeolive/src/treeolive/management/commands/: runserver.py  seed.py
treeolive/src/treeolive/management/contrib/: api.py
treeolive/src/treeolive/templates/core/: layout.html
(+257 files in other folders)
