[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/treeolivetech/pkg-tawala"
Documentation = "https://github.com/treeolivetech/pkg-tawala#readme"
Repository = "https://github.com/treeolivetech/pkg-tawala"
Issues = "https://github.com/treeolivetech/pkg-tawala/issues"

[project.scripts]
"tawala" = "tawala.management.api.cli:main"
"twl" = "tawala.management.api.cli:main"

[project]
name = "Tawala"
version = "1.5.0a4"
description = "Build and deploy Django apps with confidence."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Wasike Wakhisi", email = "kevin@treeolive.tech" }]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 6",
    "Typing :: Typed",
]
dependencies = [
    "christianwhocodes==1.5.6",
    "django==6.0.4",
    "django-browser-reload==1.21.0",
    "django-compressor==4.6.0",
    "django-http-compression[brotli]==1.4.0",
    "django-minify-html==1.14.0",
    "django-phonenumber-field[phonenumberslite]==8.4.0",
    "django-sass-processor==1.4.2",
    "django-watchfiles==1.4.0",
    "libsass==0.23.0",
    "pillow==12.2.0",
    "pyperclip==1.11.0",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
psycopg = ["psycopg[binary,pool]==3.3.3"]
vercel = ["vercel==0.5.6"]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "pre-commit>=4.5.1",
    "psycopg[binary,pool]==3.3.3",
    "ruff>=0.15.10",
    "ty>=0.0.30",
    "vercel==0.5.6",
]

[tool.djlint]
ignore = "H016,H030,H031"

[tool.ruff]
lint = { select = ["D"], ignore = ["D203", "D213"] }
format = { docstring-code-format = true }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
