[project.urls]
Homepage = "https://tawala.treeolive.tech/"
Documentation = "https://tawala.treeolive.tech/docs"
Repository = "https://github.com/treeolivetech/pkg-tawala"
Issues = "https://github.com/treeolivetech/pkg-tawala/issues"

[project]
name = "tawala-cli"
version = "1.5.0a5" # Sync with main package's version.
description = "A CLI tool to create Tawala projects."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Wasike Wakhisi", email = "kevin@treeolive.tech" }]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 6",
    "Typing :: Typed",
]
dependencies = [
    "christianwhocodes==1.5.7",
    "tawala==1.5.0a5",          # Sync with main package's version.
]

[project.scripts]
"tawala-cli" = "tawala_cli.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
tawala = { workspace = true }
