[project]
name = "tawala-docs"
version = "0.1.0"
description = "Documentation and demo site project for Tawala."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["tawala[vercel,psycopg]==1.5.0a4"]

[tool.uv.sources]
tawala = { workspace = true }

[tool.tawala]
preset = { option = "vercel", token = "get-from-vercel-blob-storage-and-keep-private-via-env-var" }
layout = { option = "wip" }
allowed_hosts = ["localhost", "127.0.0.1", ".vercel.app", "tawala.treeolive.tech"]
