[project]
name = "tawala-docs"
version = "1.5.0a5"
description = "Documentation and demo site project for Tawala."
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["tawala[vercel,cli]==1.5.0a5"]

[tool.uv.sources]
tawala = { git = "https://github.com/treeolivetech/pkg-tawala.git", tag = "v1.5.0a5" }

[tool.tawala]
preset = { option = "vercel" }
layout = { option = "wip" }
allowed_hosts = [
    "localhost",
    "127.0.0.1",
    ".vercel.app",
    "tawala.treeolive.tech",
]
