[project.urls]
Homepage = "https://treeolive.tech/"
Documentation = "https://treeolive.tech/docs"
Repository = "https://github.com/treeolivetech/pkg-treeolive"
Issues = "https://github.com/treeolivetech/pkg-treeolive/issues"

[project]
name = "treeolive-api"
version = "0.1.0" # TODO: Sync with api dependency in core pyproject.toml
description = ""
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Wasike Wakhisi", email = "kevin@treeolive.tech" }]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 6",
    "Typing :: Typed",
]
dependencies = ["christianwhocodes==1.5.7", "python-dotenv==1.2.2"]

[project.scripts]
"treeolive-api" = "treeolive_api.cli:main"

[project.optional-dependencies] # TODO TEST: Sync with dev dependencies
postgresql = ["psycopg[binary,pool]==3.3.3"]
vercel = ["psycopg[binary,pool]==3.3.3", "vercel==0.5.8"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups] # TODO TEST: Sync with optional dependecies
dev = ["psycopg[binary,pool]==3.3.3", "vercel>=0.5.8"]
