[project]
name = "treeolive-ui"
version = "0.1.0" # TODO: Sync with ui dependency in core pyproject.toml
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Wasike Wakhisi", email = "kevin@treeolive.tech" }]
requires-python = ">=3.14"
dependencies = [
    "christianwhocodes==1.5.7",
    "treeolive-api==0.1.0",     # TODO TEST: Sync with API package's version.
]

[tool.uv.sources]
treeolive-api = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
