[project.urls]
Homepage = "https://treeolive.tech/"
Documentation = "https://treeolive.tech/docs"
Repository = "https://github.com/treeolivetech/pkg-treeolive"
Issues = "https://github.com/treeolivetech/pkg-treeolive/issues"

[project]
name = "treeolive"
version = "0.1.0b1"
description = "Build and deploy Django apps with confidence."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Wasike Wakhisi", email = "kevin@treeolive.tech" }]
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django :: 6",
    "Typing :: Typed",
]
dependencies = [
    "christianwhocodes==1.5.7",
    "django==6.0.4",
    "django-browser-reload==1.21.0",
    "django-compressor==4.6.0",
    "django-http-compression[brotli]==1.4.0",
    "django-minify-html==1.14.0",
    "django-phonenumber-field[phonenumberslite]>=8.4.0",
    "django-sass-processor==1.4.2",
    "libsass==0.23.0",
    "pillow==12.2.0",
    "pyperclip==1.11.0",
    "treeolive-api==0.1.0",                              # TODO TEST: Sync with API package's version.
    "treeolive-ui==0.1.0",                               # TODO TEST: Sync with UI package's version.
]

[project.scripts]
"treeolive" = "treeolive.management.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
treeolive-api = { workspace = true }
treeolive-ui = { workspace = true }
