[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[project]
name = "tawala-school"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Wasike Wakhisi", email = "kevin@treeolive.tech" }]
requires-python = ">=3.14"
dependencies = ["pillow==12.2.0", "tawala-api==0.1.0"]

[tool.uv.sources]
tawala-api = { workspace = true }
